change build target to java17